Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <section id="main_content">
           <p>This is an additional adapter for use with Connector for Microsoft Dynamics that allows for the synchronization of data between two Microsoft Dynamics CRM organizations.  The adapter allows for communication between two endpoints that exist on any authentication/hosting environment (on-premises, online, IFD, etc.)  This means that you can leverage this adapter to move Microsoft Dynamics CRM data between test and production servers or from on-premises to the cloud.</p>
 
+<p>This adapter IS NOT supported by Microsoft support.  Its support comes from the developer community.</p>
+
 <p>More information on Connector for Microsoft Dynamics can be found here: <a href="http://blogs.msdn.com/b/dynamicsconnector">http://blogs.msdn.com/b/dynamicsconnector</a></p>
         </section>
 
